--- a/index.html
+++ b/index.html
@@ -306,8 +306,10 @@
                 gap: 1.5rem;
             }
             
-            .stakeholder-logo {
-                max-height: 60px;
+            
+            .stakeholders-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2rem;
             }
         }
     </style>
